Refactor: apply linting fixes and improve code quality (#132)